3) Please include your name with the changes you make.
4) Whenever making an update, please update this file, no matter how
small - this just lets others know that the file has changed if nothing
else.  With this, include the file(s) that you changed.
------------------------------------------------------------------------------
Changes for SVN:

socket/request.c, doc/Developers/protocol: Properly check "setup sound"
 settings; document allowed values.
socket/request.c: Properly check input read from client socket.
Andreas Kirschbaum 2008-11-18

Tentative fix for bug #1982043: Ruggilli immolation.
 server/disease.c: don't remove god-diven diseases.
Nicolas Weeger 2008-11-11

Tentative fix for bug #2094038: Monk Confusion...
 server/gods.c: don't try to update the 'no weapon' flag if the player is
 forbidden weapons, that messes with things.
Nicolas Weeger 2008-11-10

Fix for bug #2081472: short int encoding for food value in payment altars.
(merged from trunk)
 include/living.h object.h: make food and last_eat sint32 so no overflow.
 Nicolas Weeger 2008-10-31

Add new setup option "num_look_objects": allows clients to set the size
of the ground view. Clients not sending this option default to 50 which
is the previously hard-coded size. Fixes some off-by-one issues; now
always exactly the requested number of objects are sent.
 trunk/include/newserver.h
 trunk/socket/item.c
 trunk/socket/init.c
 trunk/socket/request.c
 trunk/doc/Developers/protocol
Andreas Kirschbaum 2008-09-06

Backport from trunk: Inform other party members when a player leaves a
party by joining or creating another party, not only when the player uses
"party leave".
 server/c_party.c
Raphaël Quinet 2008-08-26

Avoid problems if the floor was already removed together with a wall.
 server/build_map.c
Raphaël Quinet 2008-08-04

Merged bug fix from trunk: when building a new floor on top of an old floor,
the old one was never removed, resulting in a stack of floors in some buildable
areas.