@@ -152,8 +152,18 @@ void set_up_cmd(char *buf, int len, socket_struct *ns)
 	    ns->exp64 = atoi(param);
 	    safe_strcat(cmdback, param, &slen, HUGE_BUF);
 	} else if (!strcmp(cmd, "spellmon")) {
-	    ns->monitor_spells = atoi(param);
-	    safe_strcat(cmdback, param, &slen, HUGE_BUF);
+            int monitor_spells;
+
+            monitor_spells = atoi(param);
+            if (monitor_spells != 0 && monitor_spells != 1) {
+                safe_strcat(cmdback, "FALSE", &slen, HUGE_BUF);
+            } else {
+                char tmpbuf[20];
+
+                ns->monitor_spells = monitor_spells;
+                snprintf(tmpbuf, sizeof(tmpbuf), "%d", monitor_spells);
+                safe_strcat(cmdback, tmpbuf, &slen, HUGE_BUF);
+            }
 	}  else if (!strcmp(cmd,"darkness")) {
 	    ns->darkness = atoi(param);
 	    safe_strcat(cmdback, param, &slen, HUGE_BUF);
